[gd_scene load_steps=2 format=3 uid="uid://cyymo1nxtcf40"]

[ext_resource type="Script" path="res://scripts/scrolling_choice_box.gd" id="1_wiqew"]

[node name="ScrollingChoiceBox" type="CenterContainer"]
offset_right = 240.0
offset_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_wiqew")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_font_sizes/font_size = 14
text = "Default:"
vertical_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "<"

[node name="Panel" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Panel/MarginContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Sample Text"
horizontal_alignment = 1

[node name="RButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = ">"

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/HBoxContainer/LButton" to="." method="_on_l_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/RButton" to="." method="_on_r_button_pressed"]
[connection signal="color_changed" from="VBoxContainer/HBoxContainer/ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
